# comfyui-art-venture

./: .gitignore  LICENSE  README.md  __init__.py  art_venture.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
javascript/: avInput.js  widgetInputs.js
modules/: art_venture.py  controlnet_nodes.py  faceswap_nodes.py  image_utils.py  ip_adapter_nodes.py  log.py  logger.py  masking.py  model_downloader.py  model_utils.py  nodes.py  utility_nodes.py  utils.py  workflow.py
modules/animatediff/: __init__.py
modules/blip/: __init__.py  blip_node.py  danbooru.py
modules/blip/models/: blip.py  blip_retrieval.py  deepbooru_model.py
modules/controlnet/: __init__.py  advanced.py  aux.py  preprocessor.py  preprocessors.py
modules/fooocus/: __init__.py  anisotropic.py  efficient.py  patch.py
modules/impact/: __init__.py  facedetailer.py
modules/inpaint/: __init__.py  nodes.py
modules/inpaint/lama/: __init__.py  nodes.py  schema.py
modules/inpaint/lama/models/: base.py  lama.py
modules/inpaint/sam/: nodes.py
modules/interrogate/: .gitignore  __init__.py  blip_node.py  danbooru.py
modules/interrogate/models/: blip_itm.py  blip_nlvr.py  blip_pretrain.py  blip_vqa.py
modules/isnet/: __init__.py  segmenter.py
modules/isnet/models/: __init__.py  isnet.py  isnet_dis.py
modules/llm/: __init__.py  chat.py
modules/postprocessing/: __init__.py  color_blend.py  color_correct.py
modules/sdxl_prompt_styler/: sdxl_prompt_styler.py  sdxl_styles_sai.json
modules/video/: __init__.py
web/: text-switch-case.js  upload.js  utils.js
(+25 files in other folders)
