[project]
name = "comfyui-art-venture"
description = "Nodes: ImagesConcat, LoadImageFromUrl, AV_UploadImage"
version = "1.0.0"
license = "LICENSE"
dependencies = ["timm==0.6.13", "transformers", "fairscale", "pycocoevalcap", "opencv-python", "qrcode[pil]", "pytorch_lightning", "kornia", "pydantic", "segment_anything", "omegaconf", "boto3>=1.34.101"]

[project.urls]
Repository = "https://github.com/sipherxyz/comfyui-art-venture"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "protogaia"
DisplayName = "ArtVenture"
Icon = ""
